hphp/test/zend/good/Zend/tests/anon/006.php
<?php
namespace lone {
   $hello = new class{} ;
}
namespace {
    var_dump ($hello);
}
