hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_offsetGet_empty.php
<?php

$array = new SplDoublyLinkedList( );

$get = $array->offsetGet();

?>